Building on osx a couple of warnings are reported for gstrtspconnection.c
I'd tried to build a gst-uninstalled environment in osx 10.12.6 and XCode 8.3.3
CC libgstrtsp_1.0_la-gstrtspconnection.lo
gstrtspconnection.c:3922:27: error: comparison of unsigned expression >= 0 is always true [-Werror,-Wtautological-compare]
if (bytes_written >= 0) {
~~~~~~~~~~~~~ ^ ~
gstrtspconnection.c:4357:25: error: comparison of unsigned expression >= 0 is always true [-Werror,-Wtautological-compare]
if (bytes_written >= 0) {
~~~~~~~~~~~~~ ^ ~